Fix #293 radio CSS alignment

--- a/llab/css/default.css
+++ b/llab/css/default.css
@@ -790,8 +790,15 @@ img.indent, div.indent {
   padding: 0.5em 0;
 }
 
-.MultipleChoice .radiobuttondiv .option-row .option-input {
-  flex: 1 1 1;
+/* TODO: Bootstrap 5 revisit this! */
+.radiobuttondiv .radio label {
+  display: flex;
+  align-items: center;
+}
+.radiobuttondiv .radio label input[type="radio"] {
+  margin-top: 0;
+  margin-right: 5px;
+  flex-shrink: 0;
 }
 
 .MultipleChoice .radiobuttondiv .option-feedback {
